--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -11,15 +13,23 @@ body {
     font-size: medium;
 }
 
-body::before {
-    content: "";
-    position: fixed;
-    background: #040404 url("https://user-images.githubusercontent.com/66039545/159013675-685d7c80-039e-41ab-8e1a-02fee891c4a9.jpeg") top right no-repeat;
-    background-size: cover;
-    left: 0;
-    right: 0;
-    top: 0;
-    height: 100vh;
-    z-index: -1;
-    
+body {
+    background: url(https://user-images.githubusercontent.com/66039545/159009459-c77a48b9-026d-4aa4-8f94-370d7c9767d5.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    overflow-x: hidden;
+}
+
+
+h1 {
+    font-family: 'Lobster',
+    cursive;
+    color: #cc1b1b;
+    font-size: 100px;
+}
+
+h2 {
+    font-family: 'Dancing Script',
+    cursive;
+    color: #85311b;
 }
