git commit will fix a bug with table displaying irregulary without button click

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -38,6 +38,10 @@ th {
     color: white;
 }
 
+.table {
+    display: none;
+}
+
 #store {
     display: none;
     text-align: center;
@@ -88,3 +92,5 @@ h5 em {
 .reset-btn {
 display: none;
 }
+
+
